# rd-challenge

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/v1/: api.py  endpoints.py
src/app/core/: config.py  database.py  exceptions.py
src/app/models/: grid.py  probe.py
src/app/repositories/: grid_repository.py  probe_repository.py
src/app/schemas/: probe.py
src/app/services/: probe_service.py
src/tests/: conftest.py  test_main.py
src/tests/api/: test_endpoints.py
src/tests/core/: test_database.py
src/tests/repositories/: test_grid_repository.py  test_probe_repository.py
src/tests/services/: test_probe_service.py
